--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "repository": "git@github.com:serge-web/serge-web.git",
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "private": false,
   "workspaces" : [
     "packages/*"
