--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,33 @@
 {
   "name": "@serge/server",
   "version": "0.2.0",
-  "main": "index.js",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "main": "main.js",
+  "bin": "bin.js",
+  "dependencies": {
+    "adm-zip": "^0.4.13",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "express-pouchdb": "^4.1.0",
+    "ip": "^1.1.5",
+    "nodemon": "^1.18.11",
+    "opn": "^6.0.0",
+    "path": "^0.12.7",
+    "pouchdb-adapter-http": "^7.0.0",
+    "pouchdb-adapter-node-websql": "^7.0.0",
+    "pouchdb-core": "^7.0.0",
+    "pouchdb-mapreduce": "^7.0.0",
+    "pouchdb-replication": "^7.0.0",
+    "sqlite3": "^4.1.0",
+    "uniqid": "^5.0.3",
+    "walk": "^2.3.14"
+  },
+  "optionalDependencies": {
+    "node-windows": "^0.1.14"
+  },
+  "scripts": {
+    "dev": "nodemon main.js",
+    "heroku-postbuild": "cd ./client && npm i && npm run build",
+    "start": "node main.js"
+  }
 }
