converted root package to private as the root will never be published to npm and it is a requirement for workspace

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "git@github.com:serge-web/serge-web.git",
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
   "license": "Apache-2.0",
-  "private": false,
+  "private": true,
   "workspaces" : [
     "packages/*"
   ]
