--- a/package.json
+++ b/package.json
@@ -6,7 +6,18 @@
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
   "license": "Apache-2.0",
   "private": true,
-  "workspaces" : [
+  "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "lerna": "^3.16.4",
+    "npm-run-all": "^4.1.5"
+  },
+  "scripts": {
+    "start": "run-p start:*",
+    "start:server": "cd packages/server; yarn start",
+    "start:client": "cd packages/client; yarn start",
+    "build": "lerna run build --scope=@serge/client",
+    "diff": "lerna diff"
+  }
 }
