added log.txt and the client packages 'build' folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,9 @@ typings/
 # next.js build output
 .next
 
-OS Specific files
+# OS Specific files
 .DS_Store
+
+# Generated files and folders
+packages/client/build/**/*
+log.txt
