--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -4,12 +4,12 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "dependencies": {
-    "@serge/themes": "^0.2.0",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@json-editor/json-editor": "^1.3.5",
+    "@serge/themes": "^0.2.0",
     "bootstrap": "^4.3.1",
     "check-types": "^8.0.1",
     "classnames": "^2.2.6",
@@ -55,13 +55,21 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "prettier-standard": "^15.0.1"
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^1.18.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix src/**/* --ext .js --ext .jsx"
   },
   "browserslist": [
     ">0.2%",
