--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "bin": "bin.js",
   "dependencies": {
-    "@serge/client" : "^0.2.0",
+    "@serge/client": "^0.2.0",
     "adm-zip": "^0.4.13",
     "cors": "^2.8.5",
     "express": "^4.16.4",
@@ -23,12 +23,24 @@
     "uniqid": "^5.0.3",
     "walk": "^2.3.14"
   },
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^1.18.2"
+  },
   "optionalDependencies": {
     "node-windows": "^0.1.14"
   },
   "scripts": {
     "dev": "nodemon main.js",
     "heroku-postbuild": "cd ./client && npm i && npm run build",
-    "start": "node main.js"
+    "start": "node main.js",
+    "lint": "eslint --fix **/*.js"
   }
 }
