configured stylelint to run and work with prettier for the themes package

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "start": "run-p start:*",
     "start:server": "cd packages/server; yarn start",
     "start:client": "cd packages/client; yarn start",
+    "test" : "run-p test:*",
+    "test:e2e" : "echo \"No end-to-end tests specified\" && exit 0",
+    "test:unit" : "echo \"No unit tests specified\" && exit 0",
     "lint" : "run-p lint:*",
     "lint:themes" : "cd packages/themes; stylelint *.scss --fix",
     "build": "lerna run build --scope=@serge/client",
