- Minor refactor for fixing linting issues - Add react eslint plugin

--- a/packages/client/.eslintrc
+++ b/packages/client/.eslintrc
@@ -1,4 +1,10 @@
 {
-  "extends" : ["standard"],
-  "plugins": ["prettier"]
+  "extends" : [
+    "standard",
+    "plugin:react/recommended"
+  ],
+  "plugins": ["prettier"],
+  "rules": {
+    "react/prop-types": 0
+  }
 }
