--- a/packages/client/.env
+++ b/packages/client/.env
@@ -1,8 +1,8 @@
 # Tells create-react-app to ignore the eslint incompatibilities (we're using our own linting tools)
 SKIP_PREFLIGHT_CHECK=true
-# Tells Travis to not fail a build do to warnings
+# Tells Travis to not fail a build due to warnings
 # TODO: This should be removed once the warnings are fixed.
-CI = false
+CI=false
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_NAME=$npm_package_name
 REACT_APP_SERVER_PATH='https://serge-dev.herokuapp.com/'
