--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "main": "index.js",
   "license": "Apache-2.0",
+  
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
@@ -78,5 +79,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://serge-dev.herokuapp.com/client/build"
+  "homepage": "https://serge-dev.herokuapp.com"
 }
