--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint" : "run-p lint:*",
     "lint:themes" : "cd packages/themes; stylelint *.scss --fix",
     "build": "lerna run build --scope=@serge/client",
-    "diff": "lerna diff"
+    "diff": "lerna diff",
+    "heroku-postbuild": "yarn build"
   }
 }
