Give the built file the correct name

--- a/packages/executable/package.json
+++ b/packages/executable/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "executable",
+  "name": "serge",
   "version": "1.0.0",
   "description": "Build Serge as executable",
   "main": "index.js",
