--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^1.3.0",
     "cypress": "^3.6.1"
   }
 }
