--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -4,9 +4,6 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@4tw/cypress-drag-drop": "^1.3.0",
-    "cypress": "^3.6.1",
-    "cypress-visual-regression": "^1.0.4"
-
+    "cypress": "^3.6.1"
   }
 }
