--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 # start the server (in background process)
 - yarn serge &
 # do a cypress run
-- cypress run --record --key 8aac5e66-e2e6-4cbc-a45c-f63f1cfd6bc7
+- yarn run cypress run --record --key 8aac5e66-e2e6-4cbc-a45c-f63f1cfd6bc7
 # kill open jobs
 -  kill $(jobs -p) || true
 notifications:
