investigate starting Serge server

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ script:
 - yarn build
 # start the server (in background process)
 - cd packages/server
-- yarn start &
+- yarn start 
 # do a cypress run
 - cd ../e2e
-- yarn run cypress run --record --key 8aac5e66-e2e6-4cbc-a45c-f63f1cfd6bc7
+# - yarn run cypress run --record --key 8aac5e66-e2e6-4cbc-a45c-f63f1cfd6bc7
 # kill open jobs
 -  kill $(jobs -p) || true
 notifications:
