Use correct path

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,7 @@ script:
 # Ian commented out the next line, it was starting the client, but Ian wants to start the server
 # - yarn build
 # start the server (in background process)
-- echo "Current directory"
-- pwd
-- cd ../packages/server
+- cd ../server
 - yarn start 
 # do a cypress run
 - cd ../e2e
