--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 # - yarn build
 # start the server (in background process)
 - cd ../server
-- yarn start 
+- yarn start &
 # do a cypress run
 - cd ../e2e
 # - yarn run cypress run --record --key 8aac5e66-e2e6-4cbc-a45c-f63f1cfd6bc7
