fix the server path in the .env file

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ matrix:
     env: PACKAGE_LOCATION=packages/client PACKAGE_NAME=@serge/client
 script:
 - cd $PACKAGE_LOCATION
+# fix the server path, to test on Travis server
+- sed -i -e 's/https/http/' .env 
+- sed -i -e 's/serge-dev.herokuapp.com/localhost:8080/' .env 
+# run test suite
 - yarn test
 # Ian commented out the next line, it was starting the client, but Ian wants to start the server
 - yarn build
