--- a/packages/client/.env
+++ b/packages/client/.env
@@ -2,4 +2,4 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_NAME=$npm_package_name
-REACT_APP_SERVER_PATH='http://localhost:8080/'
+REACT_APP_SERVER_PATH='https://serge-dev.herokuapp.com/'
