--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ script:
 # fix the server path, to test on Travis server
 - sed -i '' 's/https/http/' .env 
 - sed -i '' 's/serge-dev.herokuapp.com/localhost:8080/' .env 
+- more .env
 # run test suite
 - yarn test
 # Ian commented out the next line, it was starting the client, but Ian wants to start the server
