--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ matrix:
 script:
 - cd $PACKAGE_LOCATION
 # fix the server path, to test on Travis server
-- sed -i '' 's/https/http/' .env 
-- sed -i '' 's/serge-dev.herokuapp.com/localhost:8080/' .env 
+- sed -i -e 's/https/http/' .env 
+- sed -i -e 's/serge-dev.herokuapp.com/localhost:8080/' .env 
 - more .env
 # run test suite
 - yarn test
