--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ addons:
     packages:
       # Ubuntu 16+ does not install this dependency by default, so we need to install it ourselves
       - libgconf-2-4
-cache: yarn
+cache: 
+  directories:
+    $HOME/.cache/yarn
+    $HOME/.cache/Cypress/3.6.1/Cypress/Cypress
 install:
 - yarn global add lerna jest
 - lerna bootstrap
