--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,10 @@ script:
 - yarn build
 # start the server (in background process)
 - cd ../server
-- yarn start &
+#- yarn start &
 # run the cypress test suite
-- cd ../e2e
-- yarn run cypress run --record --key 8aac5e66-e2e6-4cbc-a45c-f63f1cfd6bc7
+#- cd ../e2e
+#- yarn run cypress run --record --key 8aac5e66-e2e6-4cbc-a45c-f63f1cfd6bc7
 # kill open jobs (especially the Serge server running in the background)
 -  kill $(jobs -p) || true
 notifications:
