--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,13 +3,13 @@
   "version": "0.2.0",
   "main": "index.js",
   "license": "Apache-2.0",
-  
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@json-editor/json-editor": "^1.3.5",
+    "@material-ui/core": "^4.6.1",
     "@serge/themes": "^0.2.0",
     "bootstrap": "^4.3.1",
     "check-types": "^8.0.1",
