--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "serge-web",
+  "name": "serge",
   "version": "0.2.0",
   "main": "index.js",
-  "repository": "git@github.com:serge-web/serge-web.git",
+  "repository": "git@github.com:serge-web/serge.git",
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
   "license": "Apache-2.0",
   "private": true,
