changed react-scripts version number

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@json-editor/json-editor": "^1.3.5",
     "@serge/themes": "^0.2.0",
+    "@serge/mapping": "^0.2.0",
     "bootstrap": "^4.3.1",
     "check-types": "^8.0.1",
     "classnames": "^2.2.6",
@@ -42,7 +43,7 @@
     "react-jsonschema-form": "^1.3.0",
     "react-maskedinput": "^4.0.1",
     "react-redux": "^6.0.1",
-    "react-scripts": "3.3.0",
+    "react-scripts": "2.1.5",
     "react-select": "^2.4.2",
     "reactour": "^1.15.0",
     "reactstrap": "^7.1.0",
