--- a/packages/mapping/package.json
+++ b/packages/mapping/package.json
@@ -16,6 +16,9 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "8.0.4",
     "honeycomb-grid": "^3.1.2",
+    "leaflet": "^1.6.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^8.0.0",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10"
   },
