--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,7 +3,6 @@
   "version": "0.2.0",
   "main": "index.js",
   "license": "Apache-2.0",
-  
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
@@ -19,7 +18,9 @@
     "flat": "^4.1.0",
     "flatpickr": "^4.5.7",
     "flexlayout-react": "^0.3.4",
+    "honeycomb-grid": "^3.1.3",
     "json-metaschema": "^1.2.0",
+    "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
     "lorem-ipsum": "^2.0.3",
     "moment": "^2.24.0",
