--- a/packages/client/.env
+++ b/packages/client/.env
@@ -4,4 +4,4 @@ REACT_APP_VERSION=$npm_package_version
 REACT_APP_NAME=$npm_package_name
 # uncomment the next line to connect Serge to a server other than the one this
 # page was served from
-REACT_APP_SERVER_PATH='http://192.168.1.123:8080/'
+#REACT_APP_SERVER_PATH='https://serge-dev.herokuapp.com/'
