--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,6 +22,7 @@
     "json-metaschema": "^1.2.0",
     "leaflet": "^1.6.0",
     "leaflet-easybutton": "^2.4.0",
+    "leaflet.icon.glyph": "^0.2.1",
     "lodash": "^4.17.15",
     "lorem-ipsum": "^2.0.3",
     "moment": "^2.24.0",
