--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,6 +19,7 @@
     "flatpickr": "^4.5.7",
     "flexlayout-react": "^0.3.4",
     "honeycomb-grid": "^3.1.3",
+    "jest-mock-console": "^1.0.0",
     "json-metaschema": "^1.2.0",
     "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
