--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "leaflet-easybutton": "^2.4.0",
     "lerna": "^3.16.4",
     "npm-run-all": "^4.1.5",
     "snyk": "^1.258.2"
