--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
 # manually get yarn to install
 - yarn install
 # next line commented out, until we sort yarn allowance
-# - yarn run cypress run --record --key 8aac5e66-e2e6-4cbc-a45c-f63f1cfd6bc7
+- yarn run cypress run --record --key 8aac5e66-e2e6-4cbc-a45c-f63f1cfd6bc7
 # kill open jobs (especially the Serge server running in the background)
 - kill $(jobs -p) || true
 notifications:
