--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
 # start serge
 - yarn start:server &
 # diagnostics, see if it can see the database
-ping -c 5 http://localhost:8080/allDbs
+- ping -c 5 http://localhost:8080/allDbs
 # run the cypress test suite
 - cd packages/e2e
 # next line commented out, until we sort yarn allowance
