--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ script:
 # run unit tests
 - yarn test:unit || travis_terminate 1;
 # start serge
-- yarn start:server &
+- yarn start:server > res.txt &
+- more res.txt
 # diagnostics, see if it can see the database
 - ping -c 5 http://localhost/allDbs
 # run the cypress test suite
