--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,9 @@ script:
 # run unit tests
 - yarn test:unit || travis_terminate 1;
 # start serge
-- yarn start:server > res.txt &
-- more res.txt
+- yarn start:server
 # diagnostics, see if it can see the database
-- curl 5 http://localhost:8080/allDbs > more res2.txt
-- more res2.txt
+- curl 5 http://localhost:8080/allDbs
 # run the cypress test suite
 - cd packages/e2e
 # next line commented out, until we sort yarn allowance
