--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -23,6 +23,7 @@
     "json-metaschema": "^1.2.0",
     "leaflet": "^1.6.0",
     "leaflet-easybutton": "^2.4.0",
+    "leaflet-responsive-popup": "^0.6.4",
     "leaflet-polylinedecorator": "^1.6.0",
     "leaflet.icon.glyph": "^0.2.1",
     "lodash": "^4.17.15",
