--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
+    "@material-ui/core": "^4.9.2",
     "@storybook/react": "^5.3.13",
     "babel-loader": "^8.0.6",
     "react": "^16.12.0",
