--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -9,6 +9,12 @@
   "dependencies": {
     "@babel/core": "^7.8.4",
     "@material-ui/core": "^4.9.2",
+    "@storybook/addon-actions": "^5.3.13",
+    "@storybook/addon-backgrounds": "^5.3.13",
+    "@storybook/addon-docs": "^5.3.13",
+    "@storybook/addon-knobs": "^5.3.13",
+    "@storybook/addon-storysource": "^5.3.13",
+    "@storybook/addon-viewport": "^5.3.13",
     "@storybook/react": "^5.3.13",
     "babel-loader": "^8.0.6",
     "react": "^16.12.0",
