--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serge",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "main": "index.js",
   "repository": "git@github.com:serge-web/serge.git",
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
@@ -21,7 +21,7 @@
     "test": "run-p test:*",
     "test:e2e": "cd packages/e2e && yarn run cypress open ",
     "test:unit": "cd packages/client && yarn test",
-    "storybook" : "cd packages/storybook && yarn start",
+    "storybook": "cd packages/components && yarn start",
     "lint": "run-p lint:*",
     "lint:themes": "cd packages/themes; stylelint *.scss --fix",
     "build": "lerna run build --scope=@serge/client",
