--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "Apache-2.0",
   "scripts": {
-    "start": "start-storybook"
+    "start": "start-storybook",
+    "test": "tsc && eslint --fix src/**/*.ts* && jest"
   },
-  
   "dependencies": {
     "@babel/core": "^7.8.4",
     "@material-ui/core": "^4.9.2",
@@ -16,9 +16,31 @@
     "@storybook/addon-knobs": "^5.3.13",
     "@storybook/addon-storysource": "^5.3.13",
     "@storybook/addon-viewport": "^5.3.13",
+    "@storybook/preset-typescript": "^1.2.0",
     "@storybook/react": "^5.3.13",
+    "@types/babel-core": "^6.25.6",
+    "@types/enzyme": "^3.10.5",
+    "@types/jest": "^25.1.2",
+    "@types/react-test-renderer": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
     "babel-loader": "^8.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-standard": "^4.0.1",
+    "jest": "^25.1.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-docgen-typescript-loader": "^3.6.0",
+    "react-dom": "^16.12.0",
+    "react-test-renderer": "^16.12.0",
+    "standard": "^14.3.1",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5"
   }
 }
