--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,7 +5,10 @@
   "license": "Apache-2.0",
   "scripts": {
     "start": "start-storybook",
-    "test": "tsc && eslint --fix src/**/*.ts* && jest"
+    "test": "run-p test:*",
+    "test:lint": "eslint --fix src/**/*.ts*",
+    "test:ts": "tsc",
+    "test:unit": "jest"
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
@@ -35,6 +38,7 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.1.0",
+    "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-docgen-typescript-loader": "^3.6.0",
     "react-dom": "^16.12.0",
