--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "diff": "lerna diff",
     "heroku-postbuild": "yarn build",
     "serge": "yarn start:server",
-    "snyk-protect": "snyk protect",
+    "snyk-protect": "export NODE_OPTIONS=–max_old_space_size=8192 snyk protect",
     "prepare": "yarn run snyk-protect"
   },
   "snyk": true
