--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -4,15 +4,16 @@
   "main": "App.scss",
   "license": "Apache-2.0",
   "dependencies": {
-    "sass": "^1.23.0"
+    "sass": "^1.23.0",
+    "stylelint-config-sass-guidelines": "^7.0.0"
   },
   "devDependencies": {
-    "stylelint": "^11.1.1",
     "prettier": "^1.18.2",
+    "stylelint": "^11.1.1",
     "stylelint-config-prettier": "^6.0.0",
     "stylelint-prettier": "^1.1.1"
   },
   "scripts": {
-    "lint" : "stylelint *.scss"
+    "lint": "stylelint *.scss"
   }
 }
