--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -52,6 +52,9 @@
     "sass-loader": "^8.0.2",
     "standard": "^14.3.1",
     "style-loader": "^1.1.3",
+    "stylelint": "^13.2.0",
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "stylelint-config-standard": "^20.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "typings-for-css-modules-loader": "^1.7.0"
