updates sass config to use dart-sass for future-proofing

--- a/packages/components/.stylelintrc
+++ b/packages/components/.stylelintrc
@@ -5,6 +5,8 @@
     ],
   "plugins": ["stylelint-prettier"],
   "rules": {
-    "prettier/prettier": true
+    "prettier/prettier": true,
+    "max-nesting-depth" : 3,
+    "selector-max-id" : 1
   }
 }
