--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.8.4",
     "@emotion/core": "^10.0.27",
     "@material-ui/core": "^4.9.2",
+    "@serge/themes": "0.3.0",
     "@storybook/addon-actions": "^5.3.13",
     "@storybook/addon-backgrounds": "^5.3.13",
     "@storybook/addon-docs": "^5.3.13",
@@ -42,13 +43,13 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.1.0",
-    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-css-modules": "^4.7.11",
     "react-docgen-typescript-loader": "^3.6.0",
     "react-dom": "^16.12.0",
     "react-test-renderer": "^16.12.0",
+    "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "standard": "^14.3.1",
     "style-loader": "^1.1.3",
