--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,29 +1,33 @@
 {
   "name": "@serge/storybook",
   "version": "0.3.0",
-  "main": "index.js",
   "license": "Apache-2.0",
+  "author": "foxleigh81 <alex@alexfoxleigh.com>",
   "scripts": {
     "start": "start-storybook",
     "test": "run-p test:*",
     "test:lint": "eslint --fix src/**/*.ts*",
     "test:ts": "tsc",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "test:styles": "stylelint *.scss"
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
-    "@emotion/core": "^10.0.27",
     "@material-ui/core": "^4.9.2",
+    "@serge/custom-types": "0.3.0",
+    "@serge/mocks": "0.3.0",
     "@serge/themes": "0.3.0",
     "@storybook/addon-actions": "^5.3.13",
     "@storybook/addon-backgrounds": "^5.3.13",
     "@storybook/addon-docs": "^5.3.13",
+    "@storybook/addon-info": "^5.3.13",
     "@storybook/addon-knobs": "^5.3.13",
     "@storybook/addon-storysource": "^5.3.13",
     "@storybook/addon-viewport": "^5.3.13",
     "@storybook/preset-typescript": "^1.2.0",
     "@storybook/react": "^5.3.13",
     "@types/babel-core": "^6.25.6",
+    "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.1.2",
     "@types/node-sass": "^4.11.0",
@@ -31,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "babel-loader": "^8.0.6",
+    "classnames": "^2.2.6",
     "css-loader": "^3.4.2",
     "css-modules-typescript-loader": "^4.0.0",
     "enzyme": "^3.11.0",
@@ -52,12 +57,17 @@
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "standard": "^14.3.1",
+    "storybook-readme": "^5.0.8",
     "style-loader": "^1.1.3",
     "stylelint": "^13.2.0",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-config-standard": "^20.0.0",
+    "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
     "typings-for-css-modules-loader": "^1.7.0"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.8.3"
   }
 }
