--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,7 +9,7 @@
     "test:lint": "eslint --fix src/**/*.ts*",
     "test:ts": "tsc",
     "test:unit": "jest",
-    "test:styles": "stylelint *.scss"
+    "test:styles": "stylelint src/**/*.scss"
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
@@ -60,8 +60,12 @@
     "storybook-readme": "^5.0.8",
     "style-loader": "^1.1.3",
     "stylelint": "^13.2.0",
+    "stylelint-config-css-modules": "^2.2.0",
+    "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-config-standard": "^20.0.0",
+    "stylelint-css-modules": "^0.9.0",
+    "stylelint-prettier": "^1.1.2",
     "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.5",
