Storybook now renders a story automatically from the component file and the componens README.md file

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -19,7 +19,7 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "declaration": true,
+    "declaration": false,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
