--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -19,7 +19,6 @@
     "@serge/themes": "0.3.0",
     "@storybook/addon-actions": "^5.3.13",
     "@storybook/addon-backgrounds": "^5.3.13",
-    "@storybook/addon-docs": "^5.3.13",
     "@storybook/addon-info": "^5.3.13",
     "@storybook/addon-knobs": "^5.3.13",
     "@storybook/addon-storysource": "^5.3.13",
@@ -48,6 +47,7 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.1.0",
+    "markdown-loader": "^5.1.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-css-modules": "^4.7.11",
@@ -57,6 +57,7 @@
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "standard": "^14.3.1",
+    "storybook-addon-react-docgen": "^1.2.28",
     "storybook-readme": "^5.0.8",
     "style-loader": "^1.1.3",
     "stylelint": "^13.2.0",
