--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@serge/storybook",
+  "name": "@serge/components",
   "version": "0.3.0",
   "license": "Apache-2.0",
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
@@ -31,6 +31,7 @@
     "@types/jest": "^25.1.2",
     "@types/node-sass": "^4.11.0",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "babel-loader": "^8.0.6",
