components now has a build script which generates usable components for the client package

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,11 +3,14 @@
   "version": "0.3.0",
   "license": "Apache-2.0",
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
+  "main": "build/index.js",
   "scripts": {
     "start": "start-storybook",
+    "build": "rimraf build && tsc --build",
+    "postbuild": "copyfiles -u 1 -e src/**/*.ts* -e src/**/*.md src/**/*.* build && rimraf build/vendor && rimraf build/local/**/mocks && rimraf build/local/**/*.stories.* && rimraf build/local/**/*.spec.*",
     "test": "run-p test:*",
     "test:lint": "eslint --fix src/**/*.ts*",
-    "test:ts": "tsc",
+    "test:ts": "tsc --pretty",
     "test:unit": "jest",
     "test:styles": "stylelint src/**/*.scss"
   },
@@ -36,6 +39,7 @@
     "@typescript-eslint/parser": "^2.20.0",
     "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
+    "copyfiles": "^2.2.0",
     "css-loader": "^3.4.2",
     "css-modules-typescript-loader": "^4.0.0",
     "enzyme": "^3.11.0",
@@ -55,6 +59,7 @@
     "react-docgen-typescript-loader": "^3.6.0",
     "react-dom": "^16.12.0",
     "react-test-renderer": "^16.12.0",
+    "rimraf": "^3.0.2",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
     "standard": "^14.3.1",
