--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@json-editor/json-editor": "^1.3.5",
+    "@serge/components": "0.3.0",
     "@serge/themes": "0.3.0",
     "bootstrap": "^4.3.1",
     "check-types": "^8.0.1",
