--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "run-p start:*",
     "start:server": "cd packages/server && yarn start",
     "start:client": "cd packages/client && yarn start",
-    "dev" : "yarn start && yarn component-dev && yarn storybook",
+    "dev" : "yarn component-dev & yarn storybook & yarn start",
     "test": "run-p test:*",
     "test:e2e": "cd packages/e2e && yarn run cypress open ",
     "test:unit": "cd packages/client && yarn test",
