Improved testing process - Splits 'test' and 'lint' commands into their own separate script groups - Moved Cypress commands into the Cypress package - Renamed 'test:e2e' to 'test-local' - 'test' in the cypress package now runs 'cypress run' instead of 'cypress open' - Started to utilise lerna properly by adding more usage of the 'lerna run' commands

--- a/package.json
+++ b/package.json
@@ -19,13 +19,11 @@
     "start:server": "cd packages/server && yarn start",
     "start:client": "cd packages/client && yarn start",
     "dev" : "yarn component-dev & yarn storybook & yarn start",
-    "test": "run-p test:*",
-    "test:e2e": "cd packages/e2e && yarn run cypress open ",
-    "test:unit": "cd packages/client && yarn test",
+    "test": "lerna run test",
+    "test-local" : "cd packages/e2e && yarn run cypress open",
     "storybook": "cd packages/components && yarn start",
-    "lint": "run-p lint:*",
-    "lint:themes": "cd packages/themes; stylelint *.scss --fix",
-    "build": "lerna run build --scope '{@serge/client, @serge/components}'",
+    "lint": "lerna run lint",
+    "build": "lerna run build --scope @serge/components --scope @serge/client",
     "pkg-build": "cd packages/executable && yarn start",
     "component-build": "cd packages/components && yarn build",
     "component-dev": "cd packages/components && yarn build && yarn watch",
