--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -77,8 +77,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint --fix src/**/* --ext .js --ext .jsx"
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
