--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -5,5 +5,8 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cypress": "^3.8.2"
+  },
+  "scripts": {
+    "test" : "yarn run cypress run --headless"
   }
 }
