--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -14,6 +14,6 @@
     "stylelint-prettier": "^1.1.1"
   },
   "scripts": {
-    "lint": "stylelint *.scss"
+    "lint": "stylelint *.scss --fix"
   }
 }
