fixup! Improved testing process - Splits 'test' and 'lint' commands into their own separate script groups - Moved Cypress commands into the Cypress package - Renamed 'test:e2e' to 'test-local' - 'test' in the cypress package now runs 'cypress run' instead of 'cypress open' - Started to utilise lerna properly by adding more usage of the 'lerna run' commands

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start:client": "cd packages/client && yarn start",
     "dev" : "yarn component-dev & yarn storybook & yarn start",
     "test": "lerna run test",
-    "test-local" : "cd packages/e2e && yarn run cypress open",
+    "test-local" : "lerna run test-local",
     "storybook": "cd packages/components && yarn start",
     "lint": "lerna run lint",
     "build": "lerna run build --scope @serge/components --scope @serge/client",
