--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -7,6 +7,7 @@
     "cypress": "^3.8.2"
   },
   "scripts": {
-    "test" : "yarn run cypress run --headless"
+    "test" : "yarn run cypress run --headless",
+    "test-local" : "yarn run cypress open"
   }
 }
