--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
     "snyk": "^1.258.2"
   },
   "scripts": {
-    "start": "run-p start:*",
-    "start:server": "cd packages/server && yarn start",
-    "start:client": "cd packages/client && yarn start",
+    "start": "yarn run-p start-*",
+    "start-client": "lerna run start --scope @serge/client",
+    "start-server": "lerna run start --scope @serge/server",
     "dev" : "yarn component-dev & yarn storybook & yarn start",
     "test": "lerna run test",
     "test-local" : "lerna run test-local",
-    "storybook": "cd packages/components && yarn start",
+    "storybook": "lerna run storybook",
     "lint": "lerna run lint",
     "build": "lerna run build --scope @serge/components --scope @serge/client",
-    "pkg-build": "cd packages/executable && yarn start",
-    "component-build": "cd packages/components && yarn build",
-    "component-dev": "cd packages/components && yarn build && yarn watch",
+    "pkg-build": "lerna run start --scope @serge/executable",
+    "component-build": "lerna run build --scope @serge/components",
+    "component-dev": "yarn component-build & lerna run watch --parallel --scope @serge/components",
     "diff": "lerna diff",
     "heroku-postbuild": "yarn build",
-    "serge": "yarn start:server",
+    "serge": "yarn start-server",
     "snyk-protect": "export NODE_OPTIONS=–max_old_space_size=8192 snyk protect",
     "prepare": "yarn run snyk-protect"
   },
