adds linting to the travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ before_script:
 script:
 # build Serge deployment
 - yarn build
+# run the linting drop out on failure
+- yarn lint || travis_terminate 1;
 # start serge
 - yarn start-server &
 # run the tests drop out on failure
