--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -23,25 +23,18 @@
     "@serge/custom-types": "0.3.0",
     "@serge/mocks": "0.3.0",
     "@serge/themes": "0.3.0",
-    "@storybook/addon-actions": "^5.3.13",
     "@storybook/addon-backgrounds": "^5.3.13",
-    "@storybook/addon-info": "^5.3.13",
     "@storybook/addon-knobs": "^5.3.13",
-    "@storybook/addon-storysource": "^5.3.13",
     "@storybook/addon-viewport": "^5.3.13",
-    "@storybook/preset-typescript": "^1.2.0",
     "@storybook/react": "^5.3.13",
     "@types/babel-core": "^6.25.6",
-    "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.1.2",
     "@types/node-sass": "^4.11.0",
     "@types/react-test-renderer": "^16.9.2",
-    "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "babel-loader": "^8.0.6",
-    "classnames": "^2.2.6",
     "copyfiles": "^2.2.0",
     "css-loader": "^3.4.2",
     "css-modules-typescript-loader": "^4.0.0",
@@ -58,7 +51,6 @@
     "markdown-loader": "^5.1.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
-    "react-css-modules": "^4.7.11",
     "react-docgen-typescript-loader": "^3.6.0",
     "react-dom": "^16.12.0",
     "react-test-renderer": "^16.12.0",
@@ -78,8 +70,7 @@
     "stylelint-prettier": "^1.1.2",
     "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5",
-    "typings-for-css-modules-loader": "^1.7.0"
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.8.3"
