restores @types/vfile-message which was erroneously marked as an unused dependency

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -9,7 +9,7 @@
     "build": "rimraf build && yarn copy && tsc && yarn cleanup",
     "watch": "tsc --watch",
     "copy": "copyfiles -u 1 -e src/**/*.ts* -e src/**/*.md src/**/*.* build",
-    "cleanup" : "rimraf build/vendor && rimraf build/local/**/mocks && rimraf build/local/**/*.stories.* && rimraf build/local/**/*.spec.*",
+    "cleanup": "rimraf build/vendor && rimraf build/local/**/mocks && rimraf build/local/**/*.stories.* && rimraf build/local/**/*.spec.*",
     "test": "run-p test:*",
     "test:ts": "tsc --pretty",
     "test:unit": "jest --coverage",
@@ -32,6 +32,7 @@
     "@types/jest": "^25.1.2",
     "@types/node-sass": "^4.11.0",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/vfile-message": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "babel-loader": "^8.0.6",
