--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "test-local" : "lerna run test-local",
     "lint": "lerna run lint",
     "storybook": "lerna run storybook --scope @serge/components",
+    "build-storybook" : "lerna run build-storybook --scope @serge/components",
     "build": "lerna run build --scope @serge/components --scope @serge/client",
     "pkg-build": "lerna run start --scope @serge/executable",
     "component-build": "lerna run build --scope @serge/components",
