--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "heroku-postbuild": "yarn build",
     "serge": "yarn start-server",
     "snyk-protect": "export NODE_OPTIONS=–max_old_space_size=8192 snyk protect",
-    "prepare": "yarn run snyk-protect"
+    "prepare": "yarn run snyk-protect",
+    "version-patch" : "lerna version patch",
+    "version-minor" : "lerna version minor",
+    "version-major" : "lerna version major"
   },
   "snyk": true
 }
