--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -22,6 +22,7 @@
     "@babel/core": "^7.8.4",
     "@material-ui/core": "^4.9.2",
     "@serge/custom-types": "0.3.0",
+    "@serge/helpers": "0.3.0",
     "@serge/mocks": "0.3.0",
     "@serge/themes": "0.3.0",
     "@storybook/addon-backgrounds": "^5.3.13",
@@ -51,7 +52,9 @@
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^5.1.0",
+    "honeycomb-grid": "^3.1.3",
     "jest": "^25.1.0",
+    "leaflet": "^1.6.0",
     "markdown-loader": "^5.1.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
