--- a/packages/custom-types/package.json
+++ b/packages/custom-types/package.json
@@ -2,5 +2,6 @@
   "name": "@serge/custom-types",
   "version": "0.3.0",
   "license": "Apache-2.0",
-  "author": "foxleigh81 <alex@alexfoxleigh.com>"
+  "author": "foxleigh81 <alex@alexfoxleigh.com>",
+  "dependencies": {}
 }
