--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -59,6 +59,7 @@
     "markdown-loader": "^5.1.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-docgen-typescript-loader": "^3.6.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
