--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -34,6 +34,7 @@
     "@types/jest": "^25.1.2",
     "@types/lodash": "^4.14.149",
     "@types/node-sass": "^4.11.0",
+    "@types/react-addons-css-transition-group": "^15.0.5",
     "@types/react-leaflet": "^2.5.1",
     "@types/react-test-renderer": "^16.9.2",
     "@types/vfile-message": "^2.0.0",
