--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -22,8 +22,7 @@
     "declaration": false,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "typeRoots": ["**/types/", "./node_modules/@types", "./node_modules/@serge/custom-types"]
+    "emitDecoratorMetadata": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "build", "scripts", "jest/config"],
