--- a/packages/components/.stylelintrc
+++ b/packages/components/.stylelintrc
@@ -12,6 +12,8 @@
     "prettier/prettier": true,
     "max-nesting-depth" : 3,
     "selector-max-id" : 1,
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
     "css-modules/composed-class-names": true,
     "css-modules/css-variables": true,
     "order/properties-alphabetical-order": null
