--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -3,5 +3,5 @@
   "version": "0.3.0",
   "license": "Apache-2.0",
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
-  "main": "index.js"
+  "main": "build/index.js"
 }
