--- a/packages/mocks/package.json
+++ b/packages/mocks/package.json
@@ -2,5 +2,6 @@
   "name": "@serge/mocks",
   "version": "0.3.0",
   "license": "Apache-2.0",
+  "main": "build/index.js",
   "author": "foxleigh81 <alex@alexfoxleigh.com>"
 }
