--- a/packages/themes/.stylelintrc
+++ b/packages/themes/.stylelintrc
@@ -8,6 +8,8 @@
     "prettier/prettier": true,
     "max-nesting-depth": 3,
     "selector-max-id": 1,
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
     "selector-class-pattern": [
       "^(?:(?:o|c|u|t|s|is|has|_|js|qa)-)?[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*(?:__[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:--[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:\\[.+\\])?$",
       {
