--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@babel/core": "^7.8.4",
     "@material-ui/core": "^4.9.2",
+    "@material-ui/icons": "^4.9.1",
     "@serge/custom-types": "0.3.0",
     "@serge/helpers": "0.3.0",
     "@serge/mocks": "0.3.0",
