WIP Adds asset-icon component

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -31,6 +31,7 @@
     "@storybook/addon-viewport": "^5.3.13",
     "@storybook/react": "^5.3.13",
     "@types/babel-core": "^6.25.6",
+    "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.5",
     "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.149",
@@ -42,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
     "babel-loader": "^8.0.6",
+    "classnames": "^2.2.6",
     "copyfiles": "^2.2.0",
     "css-loader": "^3.4.2",
     "css-modules-typescript-loader": "^4.0.0",
