Added  --stream to lerna output to show progress

--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
   },
   "scripts": {
     "start": "yarn run-p start-*",
-    "start-client": "lerna run start --scope @serge/client",
-    "start-server": "lerna run start --scope @serge/server",
+    "start-client": "lerna run start --scope @serge/client --stream",
+    "start-server": "lerna run start --scope @serge/server --stream",
     "dev": "yarn component-dev & yarn start",
     "develop": "yarn component-dev & yarn storybook & yarn start",
-    "test": "lerna run test",
-    "test-local": "lerna run test-local",
-    "lint": "lerna run lint",
-    "storybook": "lerna run storybook --scope @serge/components",
-    "build-storybook": "lerna run build-storybook --scope @serge/components",
-    "build": "lerna run build --scope @serge/components --scope @serge/client",
-    "pkg-build": "lerna run start --scope @serge/executable",
-    "component-build": "lerna run build --scope @serge/components",
+    "test": "lerna run test --stream",
+    "test-local": "lerna run test-local --stream",
+    "lint": "lerna run lint --stream",
+    "storybook": "lerna run storybook --scope @serge/components --stream",
+    "build-storybook": "lerna run build-storybook --scope @serge/components --stream",
+    "build": "lerna run build --scope @serge/components --scope @serge/client --stream",
+    "pkg-build": "lerna run start --scope @serge/executable --stream",
+    "component-build": "lerna run build --scope @serge/components --stream",
     "component-dev": "yarn component-build & lerna run watch --parallel --scope @serge/components",
     "diff": "lerna diff",
     "heroku-postbuild": "yarn build",
