fixes typescript config to allow for package building again

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -4,6 +4,7 @@
   ],
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./build",
+    "rootDir": "./src",
+    "outDir": "./build"
   }
 }
