--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -67,6 +67,7 @@
     "react-docgen-typescript-loader": "^3.6.0",
     "react-dom": "^16.12.0",
     "react-leaflet": "^2.6.1",
+    "react-leaflet-vectorgrid": "^2.2.1",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^3.0.2",
     "sass": "^1.25.0",
