--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -26,6 +26,7 @@
     "@serge/helpers": "0.3.0",
     "@serge/mocks": "0.3.0",
     "@serge/themes": "0.3.0",
+    "@serge/config": "0.3.0",
     "@storybook/addon-backgrounds": "^5.3.13",
     "@storybook/addon-knobs": "^5.3.13",
     "@storybook/addon-viewport": "^5.3.13",
