Trying to get the ci build to recognise the config package

--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -3,6 +3,7 @@
   "version": "0.3.0",
   "license": "Apache-2.0",
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
+  "main": "index.ts",
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/expired-storage": "^1.0.0",
