--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -16,7 +16,7 @@
     "lint": "run-p lint:*",
     "lint:ts": "eslint --fix src/**/*.ts*",
     "lint:styles": "stylelint src/**/*.scss",
-    "build-storybook": "build-storybook -s ./static -c .storybook -o ../client/public/storybook"
+    "build-storybook": "build-storybook -s ./static -c .storybook -o ../client/build/storybook"
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
