write current directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
 - yarn build
 # Build the storybook package
 - yarn build-storybook
+- pwd
 - ls packages/client/storybook
 # run the linting drop out on failure
 - yarn lint || travis_terminate 1;
