more diagnostics lines

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,8 @@ script:
   # Build the storybook package
   - yarn build-storybook
   - pwd
-  - ls packages/client/storybook
+  - ls packages/client/build
+  - ls packages/client/build/storybook
   # run the linting drop out on failure
   - yarn lint || travis_terminate 1;
   # start serge
