Updated eslintrc to correctly remove semi-colons from the codebase

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -15,7 +15,7 @@
     "test:unit": "jest --coverage",
     "lint": "run-p lint:*",
     "lint:ts": "eslint --fix src/**/*.ts*",
-    "lint:styles": "stylelint src/**/*.scss",
+    "lint:styles": "stylelint --fix src/**/*.scss",
     "build-storybook": "build-storybook -s ./static -c .storybook -o ../client/build/storybook && pwd && ls ../client/build/storybook"
   },
   "dependencies": {
