Moves snapshot test update out of root and into components package

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "develop": "yarn component-dev & yarn storybook & yarn start",
     "test": "lerna run test --stream",
     "test-local": "lerna run test-local --stream",
-    "test-unit": "lerna run test:unit -u --stream",
+    "test-unit": "lerna run test:unit --stream",
     "lint": "lerna run lint --stream",
     "storybook": "lerna run storybook --scope @serge/components --stream",
     "build-storybook": "lerna run build-storybook --scope @serge/components --stream",
